# temida

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tox_tests.yml  unit_tests.yml
docs/schemas/: class_schema_in_work.drawio
src/app/: README.md  application.py  arbitrage.py  webscrper.py
src/application/: arbitrage.py  operators.py
src/scrapers/: README.md  base.py  betclic.py  forbet.py  fortuna.py  sts.py  superbet.py
src/utils/: README.md  events.py  parsers.py  sports.py  technical.py
tests/: README.md
tests/data/: betclic_data.csv  fortuna_data.csv  merged.csv  sts_data.csv  superbet_data.csv
tests/unit/: test_arbitrage.py  test_events.py  test_parsers.py
