[metadata]
name = temida
description = slap that like button
author = Dominik Teodorczyk
platforms = unix, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    app
    scrapers
    utils
install_requires =
    astroid>=2
    attrs>=23
    black>=23
    cachetools>=5
    certifi>=2023
    cffi>=1
    chardet>=5
    click>=8
    colorama>=0.4
    dill>=0.3
    distlib>=0.3
    exceptiongroup>=1
    filelock>=3.12
    flake8>=6
    h11>=0.1
    idna>=3
    isort>=5
    lazy-object-proxy>=1
    mccabe>=0.5
    mypy>=1
    mypy-extensions>=0.5
    numpy>=1
    outcome>=1
    packaging>=23
    pandas>=2
    pathspec>=0.11
    platformdirs>=3
    pluggy>=1
    pycodestyle>=2
    pycparser>=2
    pyflakes>=3
    pylint>=2
    pyproject-api>=1
    PySocks>=1
    pytest>=7
    pytest-cov>=4
    python-dateutil>=2
    pytz>=2023
    selenium>=4
    six>=1
    sniffio>=1
    sortedcontainers>=2
    tomli>=2
    tomlkit>=0.1
    tox>=4
    trio>=0.2
    trio-websocket>=0.1
    typing_extensions>=4
    tzdata>=2023
    urllib3>=2
    virtualenv>=20
    wrapt>=1
    wsproto>=1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7
    pytest-cov>=4
    mypy>=1
    flake8>=6
    tox>=4

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160