[metadata]
name = temida
description = slap that like button
author = Dominik Teodorczyk
platforms = unix, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    astroid>=2
    asttokens>=2
    attrs>=20
    backcall>=0.1
    black>=23
    cachetools>=5
    certifi>=2023
    cffi>=1
    chardet>=5
    click>=8
    colorama>=0.4
    comm>=0.1
    coverage>=7
    debugpy>=1
    decorator>=5
    dill>=0.3
    distlib>=0.3
    exceptiongroup>=1
    executing>=1
    filelock>=3.12
    flake8>=6
    h11>=0.1
    idna>=3
    iniconfig>=1
    ipykernel>=6
    ipython>=8
    isort>=5
    jedi>=0.1
    joblib>=1
    jupyter_client>=8
    jupyter_core>=5.3.1
    lazy-object-proxy>=1
    matplotlib-inline>=0.1
    mccabe>=0.5
    mypy>=1
    mypy-extensions>=0.5
    nest-asyncio>=1.5
    numpy>=1
    outcome>=1
    packaging>=23
    pandas>=2
    parso>=0.8
    pathspec>=0.11
    pickleshare>=0.7
    platformdirs>=3
    pluggy>=1
    prompt-toolkit>=3
    psutil>=5
    pure-eval>=0.2
    pycodestyle>=2
    pycparser>=2
    pyflakes>=3
    Pygments>=2
    pylint>=2
    pyproject-api>=1
    PySocks>=1
    pytest>=7
    pytest-cov>=4
    python-dateutil>=2
    python-dotenv>=1.0.0
    pytz>=2023
    pyzmq>=25
    rapidfuzz>=3
    scikit-learn>=1
    scipy>=1
    selenium>=4
    six>=1
    sniffio>=1
    sortedcontainers>=2
    stack-data>=0.6
    threadpoolctl>=3
    tomli>=2
    tomlkit>=0.1
    tornado>=6
    tox>=4
    traitlets>=5
    trio>=0.2
    trio-websocket>=0.1
    typing_extensions>=4
    tzdata>=2023
    urllib3>=2
    virtualenv>=20
    wcwidth>=0
    wrapt>=1
    wsproto>=1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.packages.find]
    where=src

[options.extras_require]
windows =
    pywin32>=302
testing =
    pytest>=7
    pytest-cov>=4
    mypy>=1
    flake8>=6
    tox>=4

[flake8]
max-line-length = 160

[tool:pytest]
testpaths = tests